Updated Alignment Issues on Mobile

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -205,7 +205,7 @@
 
     .contact-footer {
         font-size: 10px;
-        margin-top: 2px;
+        margin-top: 4px;
         margin-bottom: 16px;
     }
 
@@ -239,6 +239,7 @@
 
     .contact-title-email {
         font-size: 14px;
+        font-weight: 400;
         margin-top: 3vh;
         width: 95%;
     }
@@ -251,6 +252,10 @@
         width: 22px;
     }
 
+    .hover-box {
+        font-size: 7px;
+    }
+
     .hover-box:hover + .my-email {
         text-decoration: none;
         text-shadow: none;
@@ -260,7 +265,7 @@
         width: 14px;
     }
 
-     .linkedIn-img {
+    .linkedIn-img {
         width: 22px;
-     }
+    }
 }
